--- a/1_notmnist.ipynb
+++ b/1_notmnist.ipynb
@@ -12,7 +12,7 @@
     "Deep Learning\n",
     "=============\n",
     "\n",
-    "Assignment 1\n",
+    "Assignment 1 (with solutions)\n",
     "------------\n",
     "\n",
     "The objective of this assignment is to learn about simple data curation practices, and familiarize you with some of the data we'll be reusing later.\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -47,6 +47,7 @@
     "import os\n",
     "import sys\n",
     "import tarfile\n",
+    "import random\n",
     "from IPython.display import display, Image\n",
     "from scipy import ndimage\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -174,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -271,6 +272,122 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAABwAAAAcCAAAAABXZoBIAAABsUlEQVR4nG1RPUxUQRic79t374hi\ngjEKMUQLAhqiiRbEAgujiYU/hX9QGDSW9tBQETqjsbHQzkYbGho1kGinhY0nGINUxEswdjRc7ti3\n+40F79558Kba3cnMN/Mt0IHD/dUbUJRB9dgGa06klMRbeo7DlXAOdxgyviwjRWTFgvFvH/b7Ko5v\nGxk4haTzVhxuHrQIYApWkvWz1Z4yWPP0vjYOY57zR3aYca7jW5Av2DqPD+b5q7qnqqBv0z6J3GOI\nvCrd0gQPyIfQQ3V6vtlTVfDR/hxGBc/puTXQFUlxtsVXmqbJmFnGx12RHJ6wOQIAWOIOv+SJEgAQ\n653g5qlh0FmdjhfO1dQ6wrs0Fsj4LBcBgNq7a831AEAgg/3R1UcbwnackQZft22uMEbeEle4ztEu\nSSIioi79SW+L7TIiPWv2LckTOszSc/tkzjq5bpxuV1MMNSwr7g7vuXWi+H/BMj1/pCqAVnE5cAlp\nTkpFFxkib6OqAPrXydqB//b1lTHaxiCAM4/WGI3fZwcggODoxIIZafw9fREkI2nkJBKggpl8TUZS\nEU0B8SHsetJau7Mt8B9mLd6boVIjeAAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAABwAAAAcCAAAAABXZoBIAAACCklEQVR4nD2Sz0tUcRTFP/e+N42i\nCWNaCwWntJDAoITChZsg+gMMhRbVuiBX7W1Tm5Zh0LIWQYs2UbmopRBCPyyIprKmEJzKhEYNxve+\n39PiqXd1uYd7OOeeC6TcVhYkSYpB0r/fiw8u7sMAnNnlqJ369WFFkvTtCg5AW2X0nYKkuHmpp717\najXPgnSLnZpRJmW6C8Bl5QqZJlIAS0MvgDGXeO48bZXlaNoBFGIVQ0n4GIJiaLYAtxEHsFgawoDV\nHwgoJwC0F4ro7cOILG0Axv42QGp4YWawQ4b4QiLcRpJgBHtW0HKIAMYnTzxFF0BZ2rgJQMoNZVKu\nswBMh61MWhkjBRBHMUhiOpiUh6cmcJqPZr67AYa/PhZ99yA/F2rzb+t4LDZ7+jAgbMpK7aS23qiT\n5hRijytKue51VSrVyTeSND+6ffeEKQUp0zUAumt5K6g5RuKAMUwEZ8lKZuW1O4l7tvd+R3RAHAHk\n+qwg5faKhFI+eE4OBA7jwNoyAmkDAJ3BweiqYoj6XwRGG4DbQAFWK0CkHos0uhEI3wbTYEANA8yG\nEKAGDmbDBV2tGGocgewlmJV4qFwKOp2UzPcw0IxRMd8aAqBjWUEKOlXkP6egkOk6CeX+k48VJAW9\nGO8/cPD8grI8SrPmxtV1afel1/9kRbM4iRnpic7cCgdE64Swsfn1/ZPnLZf4DzsPLU/6FjdFAAAA\nAElFTkSuQmCC\n",
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAABwAAAAcCAAAAABXZoBIAAABhElEQVR4nHXSP0jUcRjH8ffzPL/r\n/Fdo/rkfHC0t5y2nIA2NDiLh0OIiCTYURBy02Rh2NMUNTeEi6GajCAmJIGjgokMgBIHagQYSp4Z5\noXdPw6l03e++6+v7efh+Hz4CAKIVb3+YPioc/T6/EWs9297DKFdNjfb89tv+WPVma2osm0ICAdBK\n/HluZ2JTXAHcxZPZn6lDACX85O/AFK4ndRV8CjAGvnn+HwIwFnwUlLvffQ4TanHSMwgt674XUpMD\nY+i4GyPvPk5QawiJjzchfeIbKtSd+NMYTLs/wepRmqDnh+92EJEEdDDBRlE9Gh/ASoMg2kt5K5pA\nOykeED0VDSmdNETh9LghHiIaTaAFmm9FvlZA1+hIRqE66OKftkw9CvEQ0c9LjETkeBwicO+ilP5/\n8QHZGRSMZ/6htgcSY+xXGgWMl57DrrNixqi/vxxmDBdnWxBUVU0geOOnvVe9MW6/mn/Uc9mUOy++\nnH19jVa/ClbxxP3O0n7Zg7Zkn60uF88d4C9MY27/IfL/ZwAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAABwAAAAcCAAAAABXZoBIAAABP0lEQVR4nHWSsUrEQBCG/9mNwYBw\nR8DGQrQQrhBfwEI5fQc7OUEsfQGt7BQ7sb3C0spKsBS7FB7YCXJaiZ2nB8rd7c5YJGuSTW6a2Z2P\nfzLZ+UlQDBn9vL883PSJGACkEizD7hJ0HWQ2luVrB7pWKcITlj3oArTGGMvuwuM2lK+0WTbyFIGy\naYXe+iHmFmNWacEEhxdOOZYjzBDiU2HXIglyeIyQoHAuxo21qfL/hwgIJ6+aAQCWthVKYYPvK3B2\nWfMgBPcIBAAUWj5kPA/cuelDYDBKM6FRhXnoKoxn3deHPlRoNdyKP3xI2IKlbDQPBmZ+F67WUwUN\nEVmcLdi0pvmu9HyQ5esOa6RdkyRw/bDfDrm5ErmVCbrsL9v851403SaTjapNMp2Vg5LBCi1YfjvT\nrXm7Wm9q+/l4uU4p+wOcZmoFxXyXQwAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAABwAAAAcCAAAAABXZoBIAAABHElEQVR4nHVTO04DMRSc5zVJSi4A\nJQegp6PhENQcgIorUIVbpOMENARFAkEBLRR8IkH4CFFAIFm/odhd+znaTGNb82Y871nG3ljZCj3d\nkGkP7QhF33cp9YlBxJBEF9E05PbKhy1hUyjvg+HLNGn19guNjjfrsK6ASCJ30CkyCHxrUmq9Nsrr\nNWPrKuMU6G1w9vwrACCT+0yZtxIOKxfT2bwMFUqOVyGwgSTuFaUDMhKhuV87K8xJlSIpR59CSzoO\nR0+zKu3jSZZW+bpt+pSFIezCR9QX+Fh6B1fSKmmUx37hVZyL41N30b/8mJn3/GEkQcH825Ln+4lE\nQGwUAEJxZCZUgJYkep4mRRZIQJeXZxBHWUr+4WCy7Dtcbf4DirwASiB/dv0AAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAABwAAAAcCAAAAABXZoBIAAAAt0lEQVR4nO2SPw4BQRhH3zeWTRQK\niUShUTiG2gHUjuMazqBzHhJR6bA2duanwA7rX6P0qm/yZjLF9+BCylwnSQqRXUIFi2O9KsM22uxR\nyja9VlEeqy/F4b0Esw9SKkf3JO/4y28yae2CA9x1y4aL920yTbIaWNFtAvhVdBmMtwp6iTdTfzbM\nHUodgPL4ZWa40Oh4S5eLka/JNoN2WYISghVrSHVEgN/nD5lIBlY2Wc1EIG51/CSTM8iZYIXRjACp\nAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAABwAAAAcCAAAAABXZoBIAAABwklEQVR4nG2Su2tUQRSHvzMz14Td\nqIQsFmLhC5+NEEyKgIgGQRQLEYmiheX+AxaChVqZMkVil8ZHiqAJaQ0iaGfAVMKCEUQjBl0Xg+Le\nOzPHYu++dH/NwHzzGz4ORwCRuGXs7LGdQyVHM37j2c3fgBgurURV1eDbyfQWIBQeavT1qJ2J+v0E\nIjqweMqrNeuvK5tpbH4bqy/WBeGRpkE3ylsRuiLAZfVBV/ch1jnX105iIXmjXr/uJfmnB4g7P6xw\nby3JAJi4UMwfhV/zC8xoqp8HEcByVUOH8TkzDLz6YRSAzZaU93846Q4C7xp3QZbGL/ZHAJkogroC\nUMsLyvJy7nKmqKipAYWWoHXWWmuNBcB9KcEhmpMJ+dlQMCvAqGmNrSvmOZYDY9iecOm9ybjRs4j5\nOYtwbST0qhpmPjifTA30osZVbyN+dNYG9z/FMK2p14Vt2HZZPmqq90GEOc1SrYwj4ox0QUTMAw31\nGJ+OADhnrXFNiBjKNfWphpfl/UlHUxo07LpzPdFoSSurbz9VPU92ZMlkLmCFw9PftHM9U73bcrYw\neOXxWmMTQtCo2en2WhkJsP3I8aO795SKSajXJqf+Anso7ZWLcYFaAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAABwAAAAcCAAAAABXZoBIAAABFUlEQVR4nN2RvUoDQRSFz925ILGx\nSCUsppCAjZ1NFBSChb6HT+Ej+B55CkW0URtLRQURWbKkUUzjz+7OPRbJJrMTn8Ap78c5M/cbOUg7\n6XqxL0R4drvpWroKksYMEiJBRiOpJEybMQCEAYmKQJq5STYRQOMxkKAuiqAkMJsVaQjEzEO6yeOs\nY0rU0VfWPjy5ejpClGSF5c29/labwFcTEhvb/Z0OgEIUrflGJPl5W5Asfozky6CHqYQJJP13SePH\n+XGvFRiqH7ZUPVyeXucAHKM9327OLu5KQBzNz4WRNI5WAMCp1PLC2nLshOZjkfWdtvAxgaE/zz+C\nShjV4jHhBaICx8W8wAmg73k+HN4jsjcunkev2S/U342+Ruq+VAAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAABwAAAAcCAAAAABXZoBIAAAA6UlEQVR4nOXTsUpCcRTH8e85Xr0g\nkjUYNQm5CI6Ja5tDU8/R0iu09ADN4aqvYG2CIDW13JaEMBcJQs2M61X7N0TT+d8n6DeeDz/4Hzh/\nrh9cSlp1ipfvGx/F0Tk6v71Z4MlnqwcSNp4TW/y4rynqVpO7F1scdqffKLIcjC3ORwko7utx4sFx\nAgrrt2Vqk+009uBrAgG49dbiJgbUt+Nf/hOK2LnIL2Z2QouFgywoBKW8xb1KCIrka/sePApBcYWT\nssXdcg6Q3PFTbA9s1q8KgaufHXoeVKyeZiJKVzPvUa+GF9CJ0r5Du/kDVBHBEkWSdRgAAAAASUVO\nRK5CYII=\n",
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAABwAAAAcCAAAAABXZoBIAAAB2ElEQVR4nF2SvUuWURjGf/c5jw6J\nFhWCSJGCVPQpRVMSDeLg0hDR0FSLDS0RNBtEf0BD/QNBUzQJgYO8Uy5aQUYlFEUaSIj5Ab7POffV\n8L7v01PXdrg4F9fHbXRgOv/g4p6djbXtMnT3HNjftXCn4oKdWlMdWTNF9dHvH2x2AWo9URqsSOe4\ng8kMQJjFuUo2Mv2vam70G39xaWDr1/i0B2SbN7/4u8x/uKJSKvUSwIoaES2mcy03r2NMUp3MKJ/A\nABYzDqGuabkYwVDcWW4nAiwURTQIHPotV9anbgAKILgcCG4M9coQH5vBW2TMjI72fZ3dCsYpPCLe\nELxVKmMNl7Q8TjdPVEpJ1ynazdxKUiqTNkfM5pTkSqc7RifkpSTt6iH7VuRyrfa0AoXex3gBEHSY\noX7AWdo2AYQbIx6Rg2yFYzEb4gOxFeWqALPshZ5zEoGx0Kngp9z1+amku9i8kuT5bMfPrpTUYOrR\nZZjw7Mr63kd7yXW5+/owwNCyZ6n0Z1Xj856V9XZy4OjUN7mkUpNtP3BPpeTS5q6UJTXV6KrOo++9\nmlJ2KbmUSy0dqe14ZlWesrt7Ti7NDta4wPCLVN3c0u36/kZwxq5dGN6bN34svprZ7owF8AeeOTN4\nGwI/5wAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "for folder in test_folders:\n",
+    "    image_files = os.listdir(folder)\n",
+    "    display(Image(filename=folder + '/' + random.choice(image_files)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -331,7 +448,9 @@
      "output_type": "stream",
      "text": [
       "Pickling ./notMNIST_large/A.pickle.\n",
-      "./notMNIST_large/A\n"
+      "./notMNIST_large/A\n",
+      "Could not read: ./notMNIST_large/A/RnJlaWdodERpc3BCb29rSXRhbGljLnR0Zg==.png : cannot identify image file './notMNIST_large/A/RnJlaWdodERpc3BCb29rSXRhbGljLnR0Zg==.png' - it's ok, skipping.\n",
+      "Could not read: ./notMNIST_large/A/SG90IE11c3RhcmQgQlROIFBvc3Rlci50dGY=.png : cannot identify image file './notMNIST_large/A/SG90IE11c3RhcmQgQlROIFBvc3Rlci50dGY=.png' - it's ok, skipping.\n"
      ]
     }
    ],
