--- a/1_notmnist.ipynb
+++ b/1_notmnist.ipynb
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -450,7 +450,110 @@
       "Pickling ./notMNIST_large/A.pickle.\n",
       "./notMNIST_large/A\n",
       "Could not read: ./notMNIST_large/A/RnJlaWdodERpc3BCb29rSXRhbGljLnR0Zg==.png : cannot identify image file './notMNIST_large/A/RnJlaWdodERpc3BCb29rSXRhbGljLnR0Zg==.png' - it's ok, skipping.\n",
-      "Could not read: ./notMNIST_large/A/SG90IE11c3RhcmQgQlROIFBvc3Rlci50dGY=.png : cannot identify image file './notMNIST_large/A/SG90IE11c3RhcmQgQlROIFBvc3Rlci50dGY=.png' - it's ok, skipping.\n"
+      "Could not read: ./notMNIST_large/A/SG90IE11c3RhcmQgQlROIFBvc3Rlci50dGY=.png : cannot identify image file './notMNIST_large/A/SG90IE11c3RhcmQgQlROIFBvc3Rlci50dGY=.png' - it's ok, skipping.\n",
+      "Could not read: ./notMNIST_large/A/Um9tYW5hIEJvbGQucGZi.png : cannot identify image file './notMNIST_large/A/Um9tYW5hIEJvbGQucGZi.png' - it's ok, skipping.\n",
+      "Full dataset tensor: (52909, 28, 28)\n",
+      "Mean: -0.12825\n",
+      "Standard deviation: 0.443121\n",
+      "Pickling ./notMNIST_large/B.pickle.\n",
+      "./notMNIST_large/B\n",
+      "Could not read: ./notMNIST_large/B/TmlraXNFRi1TZW1pQm9sZEl0YWxpYy5vdGY=.png : cannot identify image file './notMNIST_large/B/TmlraXNFRi1TZW1pQm9sZEl0YWxpYy5vdGY=.png' - it's ok, skipping.\n",
+      "Full dataset tensor: (52911, 28, 28)\n",
+      "Mean: -0.00756303\n",
+      "Standard deviation: 0.454491\n",
+      "Pickling ./notMNIST_large/C.pickle.\n",
+      "./notMNIST_large/C\n",
+      "Full dataset tensor: (52912, 28, 28)\n",
+      "Mean: -0.142258\n",
+      "Standard deviation: 0.439806\n",
+      "Pickling ./notMNIST_large/D.pickle.\n",
+      "./notMNIST_large/D\n",
+      "Could not read: ./notMNIST_large/D/VHJhbnNpdCBCb2xkLnR0Zg==.png : cannot identify image file './notMNIST_large/D/VHJhbnNpdCBCb2xkLnR0Zg==.png' - it's ok, skipping.\n",
+      "Full dataset tensor: (52911, 28, 28)\n",
+      "Mean: -0.0573678\n",
+      "Standard deviation: 0.455648\n",
+      "Pickling ./notMNIST_large/E.pickle.\n",
+      "./notMNIST_large/E\n",
+      "Full dataset tensor: (52912, 28, 28)\n",
+      "Mean: -0.069899\n",
+      "Standard deviation: 0.452942\n",
+      "Pickling ./notMNIST_large/F.pickle.\n",
+      "./notMNIST_large/F\n",
+      "Full dataset tensor: (52912, 28, 28)\n",
+      "Mean: -0.125583\n",
+      "Standard deviation: 0.44709\n",
+      "Pickling ./notMNIST_large/G.pickle.\n",
+      "./notMNIST_large/G\n",
+      "Full dataset tensor: (52912, 28, 28)\n",
+      "Mean: -0.0945814\n",
+      "Standard deviation: 0.44624\n",
+      "Pickling ./notMNIST_large/H.pickle.\n",
+      "./notMNIST_large/H\n",
+      "Full dataset tensor: (52912, 28, 28)\n",
+      "Mean: -0.0685221\n",
+      "Standard deviation: 0.454232\n",
+      "Pickling ./notMNIST_large/I.pickle.\n",
+      "./notMNIST_large/I\n",
+      "Full dataset tensor: (52912, 28, 28)\n",
+      "Mean: 0.0307862\n",
+      "Standard deviation: 0.468899\n",
+      "Pickling ./notMNIST_large/J.pickle.\n",
+      "./notMNIST_large/J\n",
+      "Full dataset tensor: (52911, 28, 28)\n",
+      "Mean: -0.153358\n",
+      "Standard deviation: 0.443656\n",
+      "Pickling ./notMNIST_small/A.pickle.\n",
+      "./notMNIST_small/A\n",
+      "Could not read: ./notMNIST_small/A/RGVtb2NyYXRpY2FCb2xkT2xkc3R5bGUgQm9sZC50dGY=.png : cannot identify image file './notMNIST_small/A/RGVtb2NyYXRpY2FCb2xkT2xkc3R5bGUgQm9sZC50dGY=.png' - it's ok, skipping.\n",
+      "Full dataset tensor: (1872, 28, 28)\n",
+      "Mean: -0.132626\n",
+      "Standard deviation: 0.445128\n",
+      "Pickling ./notMNIST_small/B.pickle.\n",
+      "./notMNIST_small/B\n",
+      "Full dataset tensor: (1873, 28, 28)\n",
+      "Mean: 0.00535609\n",
+      "Standard deviation: 0.457115\n",
+      "Pickling ./notMNIST_small/C.pickle.\n",
+      "./notMNIST_small/C\n",
+      "Full dataset tensor: (1873, 28, 28)\n",
+      "Mean: -0.141521\n",
+      "Standard deviation: 0.44269\n",
+      "Pickling ./notMNIST_small/D.pickle.\n",
+      "./notMNIST_small/D\n",
+      "Full dataset tensor: (1873, 28, 28)\n",
+      "Mean: -0.0492167\n",
+      "Standard deviation: 0.459759\n",
+      "Pickling ./notMNIST_small/E.pickle.\n",
+      "./notMNIST_small/E\n",
+      "Full dataset tensor: (1873, 28, 28)\n",
+      "Mean: -0.0599148\n",
+      "Standard deviation: 0.45735\n",
+      "Pickling ./notMNIST_small/F.pickle.\n",
+      "./notMNIST_small/F\n",
+      "Could not read: ./notMNIST_small/F/Q3Jvc3NvdmVyIEJvbGRPYmxpcXVlLnR0Zg==.png : cannot identify image file './notMNIST_small/F/Q3Jvc3NvdmVyIEJvbGRPYmxpcXVlLnR0Zg==.png' - it's ok, skipping.\n",
+      "Full dataset tensor: (1872, 28, 28)\n",
+      "Mean: -0.118185\n",
+      "Standard deviation: 0.452279\n",
+      "Pickling ./notMNIST_small/G.pickle.\n",
+      "./notMNIST_small/G\n",
+      "Full dataset tensor: (1872, 28, 28)\n",
+      "Mean: -0.0925503\n",
+      "Standard deviation: 0.449006\n",
+      "Pickling ./notMNIST_small/H.pickle.\n",
+      "./notMNIST_small/H\n",
+      "Full dataset tensor: (1872, 28, 28)\n",
+      "Mean: -0.0586893\n",
+      "Standard deviation: 0.458759\n",
+      "Pickling ./notMNIST_small/I.pickle.\n",
+      "./notMNIST_small/I\n",
+      "Full dataset tensor: (1872, 28, 28)\n",
+      "Mean: 0.0526451\n",
+      "Standard deviation: 0.471894\n",
+      "Pickling ./notMNIST_small/J.pickle.\n",
+      "./notMNIST_small/J\n",
+      "Full dataset tensor: (1872, 28, 28)\n",
+      "Mean: -0.151689\n",
+      "Standard deviation: 0.448014\n"
      ]
     }
    ],
