Reading letter from nparray and plot using pyplot

--- a/1_notmnist.ipynb
+++ b/1_notmnist.ipynb
@@ -632,6 +632,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.image.AxesImage at 0x7f042093a350>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP8AAAD8CAYAAAC4nHJkAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADIBJREFUeJzt3V2IXHcdxvHnyTaN2gpt0hhCjMaXIJSCUZdFaBHfWmsR\nUm+KASVCcRVaaNELS72w4E0p2uKFKNHGRq2tgtbmoqg1FIoitpta0ze1L0SakCZpYmlFjMnuz4s9\nkW27c85kztvs/r4fGGbm/M/M/HbOefacOf+Z83dECEA+K/ouAEA/CD+QFOEHkiL8QFKEH0iK8ANJ\nEX4gKcIPJEX4gaTO6vLFLlg9EZs2ruzyJYFU9j9/Ui8en/Uw89YKv+3LJX1b0oSkH0TEzWXzb9q4\nUg/9ZmOdlwRQYuoTzw8978i7/bYnJH1H0iclXShpm+0LR30+AN2q85l/StIzEfFcRPxX0t2StjZT\nFoC21Qn/BkkL9zEOFNNexfa07RnbM0ePzdZ4OQBNav1of0TsiIjJiJhcu2ai7ZcDMKQ64T8oaeHR\nu7cW0wAsAXXC/7CkzbbfYftsSZ+RtLuZsgC0beSuvog4ZftaSb/RfFffzoh4orHKALSqVj9/RNwn\n6b6GagHQIb7eCyRF+IGkCD+QFOEHkiL8QFKEH0iK8ANJEX4gKcIPJEX4gaQIP5AU4QeSIvxAUp2e\nunucnYzyU4xVtWN5Wenys05VtS8FbPmBpAg/kBThB5Ii/EBShB9IivADSRF+ICn6+QsZ+nWBhdjy\nA0kRfiApwg8kRfiBpAg/kBThB5Ii/EBStfr5be+X9IqkWUmnImKyiaJGUfV7+6p++u+9tKG0/da/\nfHxgm1dE6WNjzqXtaEfZcqlaJl9+7+9K27903sHS9rrrYxea+JLPRyLixQaeB0CH2O0Hkqob/pD0\nW9t7bU83URCAbtTd7b8kIg7afouk+23/NSIeXDhD8U9hWpLetoGfEgDjotaWPyIOFtdHJN0jaWqR\neXZExGRETK5d0/9BDgDzRg6/7XNsv/n0bUmXSXq8qcIAtKvOfvg6SffYPv08P42IXzdSFYDWjRz+\niHhO0nsbrKWWuv2qtzx0eWn75s/vPeOasHTdckf5+vCly24vbV8K/fx09QFJEX4gKcIPJEX4gaQI\nP5AU4QeS4vu2hZVvPFna7lWrBratKGmTpLkTJ0aqCfWULZeqZVK1PiwHbPmBpAg/kBThB5Ii/EBS\nhB9IivADSRF+ICn6+QtVp3KOkn7huarnpp+/F2XLpWqZZDjdOlt+ICnCDyRF+IGkCD+QFOEHkiL8\nQFKEH0iKfv7TXD7MtlYMPtWyJ8pPwxwlj0V7ypZL5TKpWh+WAbb8QFKEH0iK8ANJEX4gKcIPJEX4\ngaQIP5BUZT+/7Z2SPiXpSERcVExbLelnkjZJ2i/pqoj4Z3tltm/2VEW/79zgIZfn/v3vhqtBE+os\nl8r1YRkYZst/h6TXDlZ+g6Q9EbFZ0p7iPoAlpDL8EfGgpOOvmbxV0q7i9i5JVzZcF4CWjfqZf11E\nHCpuvyBpXUP1AOhI7QN+ERGSBn4R2va07RnbM0ePDf7cDKBbo4b/sO31klRcHxk0Y0TsiIjJiJhc\nu2b5H0QBlopRw79b0vbi9nZJ9zZTDoCuVIbf9l2S/ijpPbYP2L5a0s2SLrX9tKSPF/cBLCGV/fwR\nsW1A08carqWWVa53aoK7Lt5R2v6rP39gYNuKit9+z8XyPwf8OCpbLlXL5Bvnla8P0srS1rrrYxf4\nhh+QFOEHkiL8QFKEH0iK8ANJEX4gqfHvjxjShOv9H5taVd51M7VuX63nx1JTvj5Uqbs+dmH8KwTQ\nCsIPJEX4gaQIP5AU4QeSIvxAUoQfSGrZ9PPXNRtzpe2nxCnIMjlL5WedWgr9+FWW/l8AYCSEH0iK\n8ANJEX4gKcIPJEX4gaQIP5AU4QeSIvxAUoQfSIrwA0kRfiApwg8kRfiBpAg/kFTl7/lt75T0KUlH\nIuKiYtpNkr4g6Wgx240RcV9bRXah6vfZE/yfxDIzzBp9h6TLF5l+W0RsKS5LOvhARpXhj4gHJR3v\noBYAHaqzL3ut7X22d9o+v7GKAHRi1PB/V9K7JG2RdEjStwbNaHva9oztmaPHOA8eMC5GCn9EHI6I\n2YiYk/R9SVMl8+6IiMmImFy7pvykiAC6M1L4ba9fcPfTkh5vphwAXRmmq+8uSR+WdIHtA5K+LunD\ntrdICkn7JX2xxRoBtKAy/BGxbZHJt7dQSy1V592v6sd/6MTJ0vZfvfSBgW0rHKWPnQuXtqMdZcul\naplced7e0vapVStL2+uuj13ovwIAvSD8QFKEH0iK8ANJEX4gKcIPJLVshug+EadK29/ks0vbt/1h\nurT93Z/98xnXhKXrZz8pXx+e/egPS9vrro9dYMsPJEX4gaQIP5AU4QeSIvxAUoQfSIrwA0ktm37+\nuibOqjjF2IrBZyFa8YZVpQ+d+8+JUUpCTWXLpWqZVK4PywBbfiApwg8kRfiBpAg/kBThB5Ii/EBS\nhB9Iin7+06pOrz03uN83Ziv6hEsei/aULpeqZZLgdOts+YGkCD+QFOEHkiL8QFKEH0iK8ANJEX4g\nqcrw295o+wHbT9p+wvZ1xfTVtu+3/XRxfX775QJoyjBb/lOSvhIRF0r6oKRrbF8o6QZJeyJis6Q9\nxX0AS0Rl+CPiUEQ8Utx+RdJTkjZI2ippVzHbLklXtlUkgOad0Wd+25skvU/SnySti4hDRdMLktY1\nWhmAVg0dftvnSvqFpOsj4uWFbRERkmLA46Ztz9ieOXqM77gD42Ko8Nteqfng3xkRvywmH7a9vmhf\nL+nIYo+NiB0RMRkRk2vXDD4JJoBuDXO035Jul/RURNy6oGm3pO3F7e2S7m2+PABtGeYnvRdL+pyk\nx2w/Wky7UdLNkn5u+2pJ/5B0VTslAmhDZfgj4veSBv24+WPNlgOgK3zDD0iK8ANJEX4gKcIPJEX4\ngaQIP5AU4QeSIvxAUoQfSIrwA0kRfiApwg8kRfiBpAg/kBThB5Ii/EBShB9IivADSRF+ICnCDyRF\n+IGkCD+QFOEHkiL8QFKEH0iK8ANJEX4gKcIPJEX4gaQIP5BUZfhtb7T9gO0nbT9h+7pi+k22D9p+\ntLhc0X65AJpy1hDznJL0lYh4xPabJe21fX/RdltEfLO98gC0pTL8EXFI0qHi9iu2n5K0oe3CALTr\njD7z294k6X2S/lRMutb2Pts7bZ8/4DHTtmdszxw9NlurWADNGTr8ts+V9AtJ10fEy5K+K+ldkrZo\nfs/gW4s9LiJ2RMRkREyuXTPRQMkAmjBU+G2v1Hzw74yIX0pSRByOiNmImJP0fUlT7ZUJoGnDHO23\npNslPRURty6Yvn7BbJ+W9Hjz5QFoyzBH+y+W9DlJj9l+tJh2o6RttrdICkn7JX2xlQoBtGKYo/2/\nl+RFmu5rvhwAXeEbfkBShB9IivADSRF+ICnCDyRF+IGkCD+QFOEHkiL8QFKEH0iK8ANJEX4gKcIP\nJEX4gaQcEd29mH1U0j8WTLpA0oudFXBmxrW2ca1LorZRNVnb2yNi7TAzdhr+1724PRMRk70VUGJc\naxvXuiRqG1VftbHbDyRF+IGk+g7/jp5fv8y41jaudUnUNqpeauv1Mz+A/vS95QfQk17Cb/ty23+z\n/YztG/qoYRDb+20/Vow8PNNzLTttH7H9+IJpq23fb/vp4nrRYdJ6qm0sRm4uGVm61/du3Ea87ny3\n3/aEpL9LulTSAUkPS9oWEU92WsgAtvdLmoyI3vuEbX9I0r8k/SgiLiqm3SLpeETcXPzjPD8ivjom\ntd0k6V99j9xcDCizfuHI0pKulPR59fjeldR1lXp43/rY8k9JeiYinouI/0q6W9LWHuoYexHxoKTj\nr5m8VdKu4vYuza88nRtQ21iIiEMR8Uhx+xVJp0eW7vW9K6mrF32Ef4Ok5xfcP6DxGvI7JP3W9l7b\n030Xs4h1xbDpkvSCpHV9FrOIypGbu/SakaXH5r0bZcTrpnHA7/UuiYj3S/qkpGuK3duxFPOf2cap\nu2aokZu7ssjI0v/X53s36ojXTesj/AclbVxw/63FtLEQEQeL6yOS7tH4jT58+PQgqcX1kZ7r+b9x\nGrl5sZGlNQbv3TiNeN1H+B+WtNn2O2yfLekzknb3UMfr2D6nOBAj2+dIukzjN/rwbknbi9vbJd3b\nYy2vMi4jNw8aWVo9v3djN+J1RHR+kXSF5o/4Pyvpa33UMKCud0r6S3F5ou/aJN2l+d3Ak5o/NnK1\npDWS9kh6WtLvJK0eo9p+LOkxSfs0H7T1PdV2ieZ36fdJerS4XNH3e1dSVy/vG9/wA5LigB+QFOEH\nkiL8QFKEH0iK8ANJEX4gKcIPJEX4gaT+Bzke8ZcPYmjuAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f0420999790>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "datasetA = pickle.load(open(train_datasets[0], \"rb\"))\n",
+    "# print(datasetA)\n",
+    "# ndimage.imsave('A.png', datasetA[0])\n",
+    "letter = datasetA[50]\n",
+    "plt.imshow(letter)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
