Problem 3, verify if data is balanced by checking number of items

--- a/1_notmnist.ipynb
+++ b/1_notmnist.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -32,7 +32,7 @@
      }
     },
     "colab_type": "code",
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true,
     "id": "apJbCsBHl-2A",
@@ -50,7 +50,7 @@
     "import tarfile\n",
     "import random\n",
     "from IPython.display import display, Image\n",
-    "from scipy import ndimage\n",
+    "from scipy import ndimage, stats\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from six.moves.urllib.request import urlretrieve\n",
     "from six.moves import cPickle as pickle\n",
@@ -88,7 +88,7 @@
      ]
     },
     "colab_type": "code",
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "executionInfo": {
@@ -108,8 +108,7 @@
      "user_tz": 420
     },
     "id": "EYRJ4ICW6-da",
-    "outputId": "0d0f85df-155f-4a89-8e7e-ee32df36ec8d",
-    "scrolled": true
+    "outputId": "0d0f85df-155f-4a89-8e7e-ee32df36ec8d"
    },
    "outputs": [
     {
@@ -192,7 +191,7 @@
      ]
     },
     "colab_type": "code",
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "executionInfo": {
@@ -212,8 +211,7 @@
      "user_tz": 420
     },
     "id": "H8CBE-WZ8nmj",
-    "outputId": "ef6c790c-2513-4b09-962e-27c79390c762",
-    "scrolled": true
+    "outputId": "ef6c790c-2513-4b09-962e-27c79390c762"
    },
    "outputs": [
     {
@@ -278,10 +276,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
-    "editable": true,
-    "scrolled": true
+    "editable": true
    },
    "outputs": [
     {
@@ -444,8 +441,7 @@
      "user_tz": 420
     },
     "id": "h7q0XhG3MJdf",
-    "outputId": "92c391bb-86ff-431d-9ada-315568a19e59",
-    "scrolled": false
+    "outputId": "92c391bb-86ff-431d-9ada-315568a19e59"
    },
    "outputs": [
     {
@@ -640,8 +636,7 @@
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {
-    "collapsed": false,
-    "scrolled": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -671,7 +666,7 @@
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -783,7 +778,7 @@
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -909,6 +904,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def number_images(datafolders):\n",
+    "    results = np.empty(len(datafolders), dtype=int)\n",
+    "    for i, f in enumerate(datafolders):\n",
+    "        filename = f + '.pickle';\n",
+    "        dataset = unpickle_dataset(filename)\n",
+    "        results[i] = dataset.shape[0]\n",
+    "    print(\"Number of items: \", results)\n",
+    "    print(\"Standard deviation: \", np.std(results))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of items:  [1872 1873 1873 1873 1873 1872 1872 1872 1872 1872]\n",
+      "Standard deviation:  0.489897948557\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_images(test_folders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of items:  [52909 52911 52912 52911 52912 52912 52912 52912 52912 52911]\n",
+      "Standard deviation:  0.916515138991\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_images(train_folders)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -939,7 +992,7 @@
      ]
     },
     "colab_type": "code",
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "executionInfo": {
@@ -959,8 +1012,7 @@
      "user_tz": 420
     },
     "id": "s3mWgZLpyuzq",
-    "outputId": "8af66da6-902d-4719-bedc-7c9fb7ae7948",
-    "scrolled": true
+    "outputId": "8af66da6-902d-4719-bedc-7c9fb7ae7948"
    },
    "outputs": [],
    "source": [
@@ -1044,7 +1096,7 @@
      }
     },
     "colab_type": "code",
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true,
     "id": "6WZ2l2tN2zOL",
@@ -1103,7 +1155,7 @@
      }
     },
     "colab_type": "code",
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true,
     "id": "QiR_rETzem6C",
@@ -1147,7 +1199,7 @@
      ]
     },
     "colab_type": "code",
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "executionInfo": {
@@ -1167,8 +1219,7 @@
      "user_tz": 420
     },
     "id": "hQbLjrW_iT39",
-    "outputId": "b440efc6-5ee1-4cbc-d02d-93db44ebd956",
-    "scrolled": true
+    "outputId": "b440efc6-5ee1-4cbc-d02d-93db44ebd956"
    },
    "outputs": [],
    "source": [
