Kernel keeps rebooting on this version, might need to put it into its own files?

--- a/2_fullyconnected.ipynb
+++ b/2_fullyconnected.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -354,34 +354,34 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Loss at step 0: 18.508919\n",
-      "Training accuracy: 6.4%\n",
-      "Validation accuracy: 10.3%\n",
-      "Loss at step 100: 2.388574\n",
-      "Training accuracy: 71.6%\n",
-      "Validation accuracy: 70.8%\n",
-      "Loss at step 200: 1.882148\n",
-      "Training accuracy: 75.1%\n",
-      "Validation accuracy: 73.1%\n",
-      "Loss at step 300: 1.622103\n",
-      "Training accuracy: 76.5%\n",
-      "Validation accuracy: 73.7%\n",
-      "Loss at step 400: 1.449871\n",
-      "Training accuracy: 77.4%\n",
-      "Validation accuracy: 74.3%\n",
-      "Loss at step 500: 1.323824\n",
-      "Training accuracy: 78.1%\n",
-      "Validation accuracy: 74.7%\n",
-      "Loss at step 600: 1.226183\n",
-      "Training accuracy: 78.6%\n",
+      "Loss at step 0: 17.789324\n",
+      "Training accuracy: 9.8%\n",
+      "Validation accuracy: 13.3%\n",
+      "Loss at step 100: 2.335834\n",
+      "Training accuracy: 71.7%\n",
+      "Validation accuracy: 71.2%\n",
+      "Loss at step 200: 1.849160\n",
+      "Training accuracy: 74.8%\n",
+      "Validation accuracy: 73.5%\n",
+      "Loss at step 300: 1.597079\n",
+      "Training accuracy: 76.3%\n",
+      "Validation accuracy: 74.4%\n",
+      "Loss at step 400: 1.429972\n",
+      "Training accuracy: 77.3%\n",
       "Validation accuracy: 74.8%\n",
-      "Loss at step 700: 1.147430\n",
-      "Training accuracy: 79.1%\n",
-      "Validation accuracy: 75.0%\n",
-      "Loss at step 800: 1.082035\n",
-      "Training accuracy: 79.5%\n",
+      "Loss at step 500: 1.307239\n",
+      "Training accuracy: 78.0%\n",
+      "Validation accuracy: 74.8%\n",
+      "Loss at step 600: 1.211717\n",
+      "Training accuracy: 78.6%\n",
+      "Validation accuracy: 74.9%\n",
+      "Loss at step 700: 1.134170\n",
+      "Training accuracy: 79.3%\n",
       "Validation accuracy: 75.1%\n",
-      "Test accuracy: 83.1%\n"
+      "Loss at step 800: 1.069457\n",
+      "Training accuracy: 79.8%\n",
+      "Validation accuracy: 75.2%\n",
+      "Test accuracy: 82.7%\n"
      ]
     }
    ],
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -538,28 +538,28 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 16.602440\n",
-      "Minibatch accuracy: 9.4%\n",
-      "Validation accuracy: 11.9%\n",
-      "Minibatch loss at step 500: 1.184680\n",
+      "Minibatch loss at step 0: 16.539043\n",
+      "Minibatch accuracy: 11.7%\n",
+      "Validation accuracy: 12.7%\n",
+      "Minibatch loss at step 500: 1.099648\n",
       "Minibatch accuracy: 78.9%\n",
-      "Validation accuracy: 75.6%\n",
-      "Minibatch loss at step 1000: 1.547256\n",
-      "Minibatch accuracy: 75.8%\n",
-      "Validation accuracy: 76.5%\n",
-      "Minibatch loss at step 1500: 0.733363\n",
+      "Validation accuracy: 75.5%\n",
+      "Minibatch loss at step 1000: 1.534931\n",
+      "Minibatch accuracy: 73.4%\n",
+      "Validation accuracy: 76.6%\n",
+      "Minibatch loss at step 1500: 0.632843\n",
       "Minibatch accuracy: 85.2%\n",
-      "Validation accuracy: 76.9%\n",
-      "Minibatch loss at step 2000: 0.851821\n",
-      "Minibatch accuracy: 81.2%\n",
       "Validation accuracy: 77.2%\n",
-      "Minibatch loss at step 2500: 1.082378\n",
-      "Minibatch accuracy: 75.8%\n",
-      "Validation accuracy: 78.4%\n",
-      "Minibatch loss at step 3000: 0.876844\n",
-      "Minibatch accuracy: 75.8%\n",
-      "Validation accuracy: 78.6%\n",
-      "Test accuracy: 86.0%\n"
+      "Minibatch loss at step 2000: 0.859764\n",
+      "Minibatch accuracy: 83.6%\n",
+      "Validation accuracy: 77.5%\n",
+      "Minibatch loss at step 2500: 1.000303\n",
+      "Minibatch accuracy: 78.1%\n",
+      "Validation accuracy: 77.9%\n",
+      "Minibatch loss at step 3000: 1.088664\n",
+      "Minibatch accuracy: 78.9%\n",
+      "Validation accuracy: 78.9%\n",
+      "Test accuracy: 86.7%\n"
      ]
     }
    ],
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -657,6 +657,48 @@
     "    train_prediction = tf.nn.softmax(Ylogits)\n",
     "    #valid_prediction = tf.nn.softmax(tf.matmul(tf_valid_dataset, weights) + biases)\n",
     "    #test_prediction = tf.nn.softmax(tf.matmul(tf_test_dataset, weights) + biases)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's run our new network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-45b4b8176027>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mnum_steps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m300\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSession\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msession\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglobal_variables_initializer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Initialized'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tf' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "num_steps = 300\n",
+    "\n",
+    "with tf.Session(graph=graph) as session:\n",
+    "    tf.global_variables_initializer().run()\n",
+    "    print('Initialized')\n",
+    "    \n",
+    "    for step in range(num_steps):\n",
+    "        # Run the computations. We tell .run() that we want to run the optimizer,\n",
+    "        # and get the loss value and the training predictions returned as numpy\n",
+    "        # arrays.\n",
+    "        _, l, predictions = session.run([optimizer, loss, train_prediction])\n",
+    "        if (step % 100 == 0):\n",
+    "            print('Loss at step %d: %f' % (step, l))"
    ]
   },
   {
