--- a/2_fullyconnected.ipynb
+++ b/2_fullyconnected.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -292,9 +292,9 @@
     "  # These are not part of training, but merely here so that we can report\n",
     "  # accuracy figures as we train.\n",
     "  train_prediction = tf.nn.softmax(logits)\n",
-    "  valid_prediction = tf.nn.softmax(\n",
-    "    tf.matmul(tf_valid_dataset, weights) + biases)\n",
-    "  test_prediction = tf.nn.softmax(tf.matmul(tf_test_dataset, weights) + biases)"
+    "  #valid_prediction = tf.nn.softmax(\n",
+    "  #  tf.matmul(tf_valid_dataset, weights) + biases)\n",
+    "  #test_prediction = tf.nn.softmax(tf.matmul(tf_test_dataset, weights) + biases)"
    ]
   },
   {
@@ -307,6 +307,19 @@
    },
    "source": [
     "Let's run this computation and iterate:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def accuracy(predictions, labels):\n",
+    "  return (100.0 * np.sum(np.argmax(predictions, 1) == np.argmax(labels, 1))\n",
+    "          / predictions.shape[0])"
    ]
   },
   {
@@ -354,43 +367,20 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Loss at step 0: 17.789324\n",
-      "Training accuracy: 9.8%\n",
-      "Validation accuracy: 13.3%\n",
-      "Loss at step 100: 2.335834\n",
-      "Training accuracy: 71.7%\n",
-      "Validation accuracy: 71.2%\n",
-      "Loss at step 200: 1.849160\n",
-      "Training accuracy: 74.8%\n",
-      "Validation accuracy: 73.5%\n",
-      "Loss at step 300: 1.597079\n",
-      "Training accuracy: 76.3%\n",
-      "Validation accuracy: 74.4%\n",
-      "Loss at step 400: 1.429972\n",
-      "Training accuracy: 77.3%\n",
-      "Validation accuracy: 74.8%\n",
-      "Loss at step 500: 1.307239\n",
-      "Training accuracy: 78.0%\n",
-      "Validation accuracy: 74.8%\n",
-      "Loss at step 600: 1.211717\n",
-      "Training accuracy: 78.6%\n",
-      "Validation accuracy: 74.9%\n",
-      "Loss at step 700: 1.134170\n",
-      "Training accuracy: 79.3%\n",
-      "Validation accuracy: 75.1%\n",
-      "Loss at step 800: 1.069457\n",
-      "Training accuracy: 79.8%\n",
-      "Validation accuracy: 75.2%\n",
-      "Test accuracy: 82.7%\n"
+      "Loss at step 0: 17.281370\n",
+      "Loss at step 100: 2.275925\n",
+      "Loss at step 200: 1.845287\n",
+      "Loss at step 300: 1.605772\n",
+      "Loss at step 400: 1.445000\n",
+      "Loss at step 500: 1.326049\n",
+      "Loss at step 600: 1.232936\n",
+      "Loss at step 700: 1.157278\n",
+      "Loss at step 800: 1.094064\n"
      ]
     }
    ],
    "source": [
     "num_steps = 801\n",
-    "\n",
-    "def accuracy(predictions, labels):\n",
-    "  return (100.0 * np.sum(np.argmax(predictions, 1) == np.argmax(labels, 1))\n",
-    "          / predictions.shape[0])\n",
     "\n",
     "with tf.Session(graph=graph) as session:\n",
     "  # This is a one-time operation which ensures the parameters get initialized as\n",
@@ -405,14 +395,14 @@
     "    _, l, predictions = session.run([optimizer, loss, train_prediction])\n",
     "    if (step % 100 == 0):\n",
     "      print('Loss at step %d: %f' % (step, l))\n",
-    "      print('Training accuracy: %.1f%%' % accuracy(\n",
-    "        predictions, train_labels[:train_subset, :]))\n",
+    "    #  print('Training accuracy: %.1f%%' % accuracy(\n",
+    "    #    predictions, train_labels[:train_subset, :]))\n",
     "      # Calling .eval() on valid_prediction is basically like calling run(), but\n",
     "      # just to get that one numpy array. Note that it recomputes all its graph\n",
     "      # dependencies.\n",
-    "      print('Validation accuracy: %.1f%%' % accuracy(\n",
-    "        valid_prediction.eval(), valid_labels))\n",
-    "  print('Test accuracy: %.1f%%' % accuracy(test_prediction.eval(), test_labels))"
+    "    #  print('Validation accuracy: %.1f%%' % accuracy(\n",
+    "    #    valid_prediction.eval(), valid_labels))\n",
+    "  #print('Test accuracy: %.1f%%' % accuracy(test_prediction.eval(), test_labels))"
    ]
   },
   {
@@ -610,33 +600,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Number of hidden nodes\n",
-    "n_hidden_nodes = 1024\n",
+    "num_hidden_nodes = 1024\n",
+    "batch_size = 128\n",
     "\n",
     "graph = tf.Graph()\n",
     "with graph.as_default():\n",
     "    # Input data.\n",
     "    # Load the training, validation and test data into constants that are\n",
     "    # attached to the graph.\n",
-    "    tf_train_dataset = tf.constant(train_dataset)\n",
-    "    tf_train_labels = tf.constant(train_labels)\n",
+    "    tf_train_dataset = tf.placeholder(tf.float32,\n",
+    "                                      shape=(batch_size, image_size * image_size))\n",
+    "    tf_train_labels = tf.placeholder(tf.float32,\n",
+    "                                     shape=(batch_size, num_labels))\n",
     "    tf_valid_dataset = tf.constant(valid_dataset)\n",
     "    tf_test_dataset = tf.constant(test_dataset)\n",
     "    \n",
     "    # Variables for our hidden layer.\n",
     "    W1 = tf.Variable(\n",
-    "        tf.truncated_normal([image_size * image_size, n_hidden_nodes]))\n",
-    "    B1 = tf.Variable(tf.zeros([n_hidden_nodes]))\n",
+    "        tf.truncated_normal([image_size * image_size, num_hidden_nodes]))\n",
+    "    B1 = tf.Variable(tf.zeros([num_hidden_nodes]))\n",
     "    \n",
     "    # Our output layer variables, needs to have 10 neurons for our output\n",
     "    W2 = tf.Variable(\n",
-    "        tf.truncated_normal([n_hidden_nodes, 10]))\n",
+    "        tf.truncated_normal([num_hidden_nodes, num_labels]))\n",
     "    B2 = tf.Variable(tf.zeros([10]))\n",
     "    \n",
     "    # Our hidden layer with relus\n",
@@ -655,8 +648,10 @@
     "  \n",
     "    # Predictions for the training, validation, and test data.\n",
     "    train_prediction = tf.nn.softmax(Ylogits)\n",
-    "    #valid_prediction = tf.nn.softmax(tf.matmul(tf_valid_dataset, weights) + biases)\n",
-    "    #test_prediction = tf.nn.softmax(tf.matmul(tf_test_dataset, weights) + biases)"
+    "    valid_prediction_hidden = tf.nn.relu(tf.matmul(tf_valid_dataset, W1) + B1)\n",
+    "    valid_prediction = tf.nn.softmax(tf.matmul(valid_prediction_hidden, W2) + B2)\n",
+    "    test_prediction_hidden = tf.nn.relu(tf.matmul(tf_test_dataset, W1) + B1)\n",
+    "    test_prediction = tf.nn.softmax(tf.matmul(test_prediction_hidden, W2) + B2)"
    ]
   },
   {
@@ -668,37 +663,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'tf' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-45b4b8176027>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mnum_steps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m300\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSession\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msession\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglobal_variables_initializer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Initialized'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'tf' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized\n",
+      "Minibatch loss at step 0: 333.311401\n",
+      "Minibatch accuracy: 7.8%\n",
+      "Validation accuracy: 24.2%\n",
+      "Minibatch loss at step 100: 22.788754\n",
+      "Minibatch accuracy: 80.5%\n",
+      "Validation accuracy: 79.5%\n",
+      "Minibatch loss at step 200: 134.500122\n",
+      "Minibatch accuracy: 68.0%\n",
+      "Validation accuracy: 74.3%\n",
+      "Minibatch loss at step 300: 20.907038\n",
+      "Minibatch accuracy: 75.8%\n",
+      "Validation accuracy: 80.2%\n",
+      "Minibatch loss at step 400: 19.576401\n",
+      "Minibatch accuracy: 78.1%\n",
+      "Validation accuracy: 78.8%\n",
+      "Minibatch loss at step 500: 28.581593\n",
+      "Minibatch accuracy: 81.2%\n",
+      "Validation accuracy: 78.2%\n",
+      "Minibatch loss at step 600: 19.857582\n",
+      "Minibatch accuracy: 82.0%\n",
+      "Validation accuracy: 80.7%\n",
+      "Minibatch loss at step 700: 26.063599\n",
+      "Minibatch accuracy: 78.9%\n",
+      "Validation accuracy: 80.5%\n",
+      "Minibatch loss at step 800: 7.323928\n",
+      "Minibatch accuracy: 82.8%\n",
+      "Validation accuracy: 79.1%\n",
+      "Minibatch loss at step 900: 10.378599\n",
+      "Minibatch accuracy: 79.7%\n",
+      "Validation accuracy: 81.6%\n",
+      "Minibatch loss at step 1000: 7.465768\n",
+      "Minibatch accuracy: 80.5%\n",
+      "Validation accuracy: 81.2%\n",
+      "Minibatch loss at step 1100: 10.629023\n",
+      "Minibatch accuracy: 77.3%\n",
+      "Validation accuracy: 80.2%\n",
+      "Minibatch loss at step 1200: 5.633775\n",
+      "Minibatch accuracy: 85.2%\n",
+      "Validation accuracy: 80.2%\n",
+      "Minibatch loss at step 1300: 8.385679\n",
+      "Minibatch accuracy: 75.0%\n",
+      "Validation accuracy: 78.2%\n",
+      "Minibatch loss at step 1400: 6.098031\n",
+      "Minibatch accuracy: 83.6%\n",
+      "Validation accuracy: 80.5%\n",
+      "Minibatch loss at step 1500: 8.302629\n",
+      "Minibatch accuracy: 88.3%\n",
+      "Validation accuracy: 82.2%\n",
+      "Minibatch loss at step 1600: 5.569041\n",
+      "Minibatch accuracy: 79.7%\n",
+      "Validation accuracy: 81.9%\n",
+      "Minibatch loss at step 1700: 1.219079\n",
+      "Minibatch accuracy: 86.7%\n",
+      "Validation accuracy: 81.9%\n",
+      "Minibatch loss at step 1800: 3.084306\n",
+      "Minibatch accuracy: 82.8%\n",
+      "Validation accuracy: 82.3%\n",
+      "Minibatch loss at step 1900: 8.188872\n",
+      "Minibatch accuracy: 81.2%\n",
+      "Validation accuracy: 81.5%\n",
+      "Minibatch loss at step 2000: 4.677518\n",
+      "Minibatch accuracy: 84.4%\n",
+      "Validation accuracy: 81.8%\n",
+      "Minibatch loss at step 2100: 3.149594\n",
+      "Minibatch accuracy: 81.2%\n",
+      "Validation accuracy: 81.5%\n",
+      "Minibatch loss at step 2200: 6.272189\n",
+      "Minibatch accuracy: 83.6%\n",
+      "Validation accuracy: 80.6%\n",
+      "Minibatch loss at step 2300: 9.141504\n",
+      "Minibatch accuracy: 79.7%\n",
+      "Validation accuracy: 81.3%\n",
+      "Minibatch loss at step 2400: 8.223852\n",
+      "Minibatch accuracy: 82.0%\n",
+      "Validation accuracy: 81.7%\n",
+      "Minibatch loss at step 2500: 9.532944\n",
+      "Minibatch accuracy: 76.6%\n",
+      "Validation accuracy: 82.0%\n",
+      "Minibatch loss at step 2600: 14.807098\n",
+      "Minibatch accuracy: 82.8%\n",
+      "Validation accuracy: 79.1%\n",
+      "Minibatch loss at step 2700: 2.438599\n",
+      "Minibatch accuracy: 84.4%\n",
+      "Validation accuracy: 81.7%\n",
+      "Minibatch loss at step 2800: 6.918635\n",
+      "Minibatch accuracy: 83.6%\n"
      ]
     }
    ],
    "source": [
-    "num_steps = 300\n",
+    "num_steps = 3001\n",
     "\n",
     "with tf.Session(graph=graph) as session:\n",
     "    tf.global_variables_initializer().run()\n",
     "    print('Initialized')\n",
     "    \n",
     "    for step in range(num_steps):\n",
+    "        offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
+    "        batch_data = train_dataset[offset:(offset + batch_size), :]\n",
+    "        batch_labels = train_labels[offset:(offset + batch_size), :]\n",
+    "        feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
     "        # Run the computations. We tell .run() that we want to run the optimizer,\n",
     "        # and get the loss value and the training predictions returned as numpy\n",
     "        # arrays.\n",
-    "        _, l, predictions = session.run([optimizer, loss, train_prediction])\n",
+    "        _, l, predictions = session.run(\n",
+    "            [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
     "        if (step % 100 == 0):\n",
-    "            print('Loss at step %d: %f' % (step, l))"
+    "            print('Minibatch loss at step %d: %f' % (step, l))\n",
+    "            print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
+    "            print(\"Validation accuracy: %.1f%%\" % accuracy(valid_prediction.eval(), valid_labels))\n",
+    "    print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))"
    ]
   },
   {
