--- a/2_fullyconnected.ipynb
+++ b/2_fullyconnected.ipynb
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -758,7 +758,15 @@
       "Minibatch accuracy: 84.4%\n",
       "Validation accuracy: 81.7%\n",
       "Minibatch loss at step 2800: 6.918635\n",
-      "Minibatch accuracy: 83.6%\n"
+      "Minibatch accuracy: 83.6%\n",
+      "Validation accuracy: 79.3%\n",
+      "Minibatch loss at step 2900: 4.188663\n",
+      "Minibatch accuracy: 86.7%\n",
+      "Validation accuracy: 81.4%\n",
+      "Minibatch loss at step 3000: 2.324219\n",
+      "Minibatch accuracy: 81.2%\n",
+      "Validation accuracy: 82.2%\n",
+      "Test accuracy: 89.4%\n"
      ]
     }
    ],
@@ -784,6 +792,13 @@
     "            print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
     "            print(\"Validation accuracy: %.1f%%\" % accuracy(valid_prediction.eval(), valid_labels))\n",
     "    print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That's it, we managed to reach a 89.4% test accuracy. Much can be improved still, but this is already better than our previous 87% accuracy using a simple logistic classifier."
    ]
   },
   {
