More tries to increase accuracy

--- a/2_fullyconnected.ipynb
+++ b/2_fullyconnected.ipynb
@@ -313,7 +313,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -600,9 +602,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -656,16 +660,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Now, let's run our new network"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -673,100 +682,28 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 333.311401\n",
-      "Minibatch accuracy: 7.8%\n",
-      "Validation accuracy: 24.2%\n",
-      "Minibatch loss at step 100: 22.788754\n",
-      "Minibatch accuracy: 80.5%\n",
-      "Validation accuracy: 79.5%\n",
-      "Minibatch loss at step 200: 134.500122\n",
-      "Minibatch accuracy: 68.0%\n",
-      "Validation accuracy: 74.3%\n",
-      "Minibatch loss at step 300: 20.907038\n",
-      "Minibatch accuracy: 75.8%\n",
-      "Validation accuracy: 80.2%\n",
-      "Minibatch loss at step 400: 19.576401\n",
-      "Minibatch accuracy: 78.1%\n",
-      "Validation accuracy: 78.8%\n",
-      "Minibatch loss at step 500: 28.581593\n",
-      "Minibatch accuracy: 81.2%\n",
-      "Validation accuracy: 78.2%\n",
-      "Minibatch loss at step 600: 19.857582\n",
-      "Minibatch accuracy: 82.0%\n",
-      "Validation accuracy: 80.7%\n",
-      "Minibatch loss at step 700: 26.063599\n",
-      "Minibatch accuracy: 78.9%\n",
-      "Validation accuracy: 80.5%\n",
-      "Minibatch loss at step 800: 7.323928\n",
-      "Minibatch accuracy: 82.8%\n",
-      "Validation accuracy: 79.1%\n",
-      "Minibatch loss at step 900: 10.378599\n",
-      "Minibatch accuracy: 79.7%\n",
-      "Validation accuracy: 81.6%\n",
-      "Minibatch loss at step 1000: 7.465768\n",
-      "Minibatch accuracy: 80.5%\n",
-      "Validation accuracy: 81.2%\n",
-      "Minibatch loss at step 1100: 10.629023\n",
-      "Minibatch accuracy: 77.3%\n",
-      "Validation accuracy: 80.2%\n",
-      "Minibatch loss at step 1200: 5.633775\n",
-      "Minibatch accuracy: 85.2%\n",
-      "Validation accuracy: 80.2%\n",
-      "Minibatch loss at step 1300: 8.385679\n",
-      "Minibatch accuracy: 75.0%\n",
-      "Validation accuracy: 78.2%\n",
-      "Minibatch loss at step 1400: 6.098031\n",
-      "Minibatch accuracy: 83.6%\n",
-      "Validation accuracy: 80.5%\n",
-      "Minibatch loss at step 1500: 8.302629\n",
-      "Minibatch accuracy: 88.3%\n",
-      "Validation accuracy: 82.2%\n",
-      "Minibatch loss at step 1600: 5.569041\n",
-      "Minibatch accuracy: 79.7%\n",
-      "Validation accuracy: 81.9%\n",
-      "Minibatch loss at step 1700: 1.219079\n",
-      "Minibatch accuracy: 86.7%\n",
-      "Validation accuracy: 81.9%\n",
-      "Minibatch loss at step 1800: 3.084306\n",
-      "Minibatch accuracy: 82.8%\n",
-      "Validation accuracy: 82.3%\n",
-      "Minibatch loss at step 1900: 8.188872\n",
-      "Minibatch accuracy: 81.2%\n",
-      "Validation accuracy: 81.5%\n",
-      "Minibatch loss at step 2000: 4.677518\n",
+      "Minibatch loss at step 0: 371.324036\n",
+      "Minibatch accuracy: 7.0%\n",
+      "Validation accuracy: 28.1%\n",
+      "Minibatch loss at step 500: 22.735161\n",
       "Minibatch accuracy: 84.4%\n",
-      "Validation accuracy: 81.8%\n",
-      "Minibatch loss at step 2100: 3.149594\n",
-      "Minibatch accuracy: 81.2%\n",
-      "Validation accuracy: 81.5%\n",
-      "Minibatch loss at step 2200: 6.272189\n",
-      "Minibatch accuracy: 83.6%\n",
-      "Validation accuracy: 80.6%\n",
-      "Minibatch loss at step 2300: 9.141504\n",
-      "Minibatch accuracy: 79.7%\n",
+      "Validation accuracy: 80.1%\n",
+      "Minibatch loss at step 1000: 6.827272\n",
+      "Minibatch accuracy: 82.8%\n",
+      "Validation accuracy: 80.4%\n",
+      "Minibatch loss at step 1500: 6.259242\n",
+      "Minibatch accuracy: 89.1%\n",
       "Validation accuracy: 81.3%\n",
-      "Minibatch loss at step 2400: 8.223852\n",
-      "Minibatch accuracy: 82.0%\n",
+      "Minibatch loss at step 2000: 3.054079\n",
+      "Minibatch accuracy: 90.6%\n",
       "Validation accuracy: 81.7%\n",
-      "Minibatch loss at step 2500: 9.532944\n",
-      "Minibatch accuracy: 76.6%\n",
-      "Validation accuracy: 82.0%\n",
-      "Minibatch loss at step 2600: 14.807098\n",
-      "Minibatch accuracy: 82.8%\n",
-      "Validation accuracy: 79.1%\n",
-      "Minibatch loss at step 2700: 2.438599\n",
-      "Minibatch accuracy: 84.4%\n",
-      "Validation accuracy: 81.7%\n",
-      "Minibatch loss at step 2800: 6.918635\n",
+      "Minibatch loss at step 2500: 2.494099\n",
       "Minibatch accuracy: 83.6%\n",
-      "Validation accuracy: 79.3%\n",
-      "Minibatch loss at step 2900: 4.188663\n",
-      "Minibatch accuracy: 86.7%\n",
-      "Validation accuracy: 81.4%\n",
-      "Minibatch loss at step 3000: 2.324219\n",
-      "Minibatch accuracy: 81.2%\n",
+      "Validation accuracy: 82.3%\n",
+      "Minibatch loss at step 3000: 1.538564\n",
+      "Minibatch accuracy: 82.8%\n",
       "Validation accuracy: 82.2%\n",
-      "Test accuracy: 89.4%\n"
+      "Test accuracy: 89.6%\n"
      ]
     }
    ],
@@ -787,7 +724,7 @@
     "        # arrays.\n",
     "        _, l, predictions = session.run(\n",
     "            [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
-    "        if (step % 100 == 0):\n",
+    "        if (step % 500 == 0):\n",
     "            print('Minibatch loss at step %d: %f' % (step, l))\n",
     "            print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
     "            print(\"Validation accuracy: %.1f%%\" % accuracy(valid_prediction.eval(), valid_labels))\n",
@@ -796,7 +733,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "That's it, we managed to reach a 89.4% test accuracy. Much can be improved still, but this is already better than our previous 87% accuracy using a simple logistic classifier."
    ]
@@ -805,7 +745,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
