--- a/3_regularization.ipynb
+++ b/3_regularization.ipynb
@@ -253,12 +253,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll start by introducing L2 regularization for our neural network from part 2."
+    "We'll start by introducing L2 regularization for our neural network from part 2. We need to learn the regularization parameter as well, so we'll introduce this as a new parameter into the system."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -268,81 +268,28 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 3461.437988\n",
-      "Minibatch accuracy: 14.1%\n",
-      "Validation accuracy: 23.7%\n",
-      "Minibatch loss at step 100: 1149.249268\n",
-      "Minibatch accuracy: 78.9%\n",
-      "Validation accuracy: 78.1%\n",
-      "Minibatch loss at step 200: 422.217773\n",
-      "Minibatch accuracy: 78.1%\n",
-      "Validation accuracy: 76.1%\n",
-      "Minibatch loss at step 300: 153.477722\n",
-      "Minibatch accuracy: 78.9%\n",
-      "Validation accuracy: 81.3%\n",
-      "Minibatch loss at step 400: 56.587746\n",
-      "Minibatch accuracy: 84.4%\n",
-      "Validation accuracy: 83.9%\n",
-      "Minibatch loss at step 500: 21.183613\n",
-      "Minibatch accuracy: 86.7%\n",
-      "Validation accuracy: 84.2%\n",
-      "Minibatch loss at step 600: 8.383570\n",
-      "Minibatch accuracy: 83.6%\n",
-      "Validation accuracy: 83.5%\n",
-      "Minibatch loss at step 700: 3.619660\n",
-      "Minibatch accuracy: 81.2%\n",
-      "Validation accuracy: 83.0%\n",
-      "Minibatch loss at step 800: 1.660186\n",
-      "Minibatch accuracy: 86.7%\n",
-      "Validation accuracy: 83.1%\n",
-      "Minibatch loss at step 900: 1.193721\n",
-      "Minibatch accuracy: 80.5%\n",
-      "Validation accuracy: 83.5%\n",
-      "Minibatch loss at step 1000: 0.953125\n",
-      "Minibatch accuracy: 82.8%\n",
-      "Validation accuracy: 83.1%\n",
-      "Minibatch loss at step 1100: 0.812764\n",
-      "Minibatch accuracy: 84.4%\n",
-      "Validation accuracy: 83.0%\n",
-      "Minibatch loss at step 1200: 0.758493\n",
-      "Minibatch accuracy: 87.5%\n",
-      "Validation accuracy: 81.5%\n",
-      "Minibatch loss at step 1300: 0.822715\n",
-      "Minibatch accuracy: 82.0%\n",
-      "Validation accuracy: 83.1%\n",
-      "Minibatch loss at step 1400: 0.649562\n",
-      "Minibatch accuracy: 85.9%\n",
-      "Validation accuracy: 83.1%\n",
-      "Minibatch loss at step 1500: 0.582445\n",
-      "Minibatch accuracy: 88.3%\n",
-      "Validation accuracy: 83.5%\n",
-      "Minibatch loss at step 1600: 0.873761\n",
-      "Minibatch accuracy: 78.9%\n",
-      "Validation accuracy: 83.1%\n",
-      "Minibatch loss at step 1700: 0.650536\n",
-      "Minibatch accuracy: 88.3%\n",
-      "Validation accuracy: 83.5%\n",
-      "Minibatch loss at step 1800: 0.828491\n",
-      "Minibatch accuracy: 80.5%\n",
-      "Validation accuracy: 83.0%\n",
-      "Minibatch loss at step 1900: 0.830877\n",
+      "Minibatch loss at step 0: 666.059204\n",
+      "Minibatch accuracy: 9.4%\n",
+      "Validation accuracy: 31.7%\n",
+      "Minibatch loss at step 500: 198.517807\n",
       "Minibatch accuracy: 79.7%\n",
-      "Validation accuracy: 83.2%\n",
-      "Minibatch loss at step 2000: 0.611426\n",
-      "Minibatch accuracy: 89.1%\n",
-      "Validation accuracy: 83.4%\n",
-      "Minibatch loss at step 2100: 0.687301\n",
-      "Minibatch accuracy: 85.9%\n",
-      "Validation accuracy: 83.2%\n",
-      "Minibatch loss at step 2200: 0.785215\n",
-      "Minibatch accuracy: 82.0%\n",
-      "Validation accuracy: 83.0%\n",
-      "Minibatch loss at step 2300: 0.831069\n",
-      "Minibatch accuracy: 81.2%\n",
+      "Validation accuracy: 79.0%\n",
+      "Minibatch loss at step 1000: 114.694412\n",
+      "Minibatch accuracy: 79.7%\n",
+      "Validation accuracy: 81.3%\n",
+      "Minibatch loss at step 1500: 68.085236\n",
+      "Minibatch accuracy: 89.8%\n",
       "Validation accuracy: 83.5%\n",
-      "Minibatch loss at step 2400: 0.731358\n",
-      "Minibatch accuracy: 83.6%\n",
-      "Validation accuracy: 83.4%\n"
+      "Minibatch loss at step 2000: 41.256195\n",
+      "Minibatch accuracy: 91.4%\n",
+      "Validation accuracy: 84.6%\n",
+      "Minibatch loss at step 2500: 25.160244\n",
+      "Minibatch accuracy: 88.3%\n",
+      "Validation accuracy: 85.7%\n",
+      "Minibatch loss at step 3000: 15.459294\n",
+      "Minibatch accuracy: 89.1%\n",
+      "Validation accuracy: 86.8%\n",
+      "Test accuracy: 93.0%\n"
      ]
     }
    ],
@@ -363,6 +310,8 @@
     "                                     shape=(batch_size, num_labels))\n",
     "    tf_valid_dataset = tf.constant(valid_dataset)\n",
     "    tf_test_dataset = tf.constant(test_dataset)\n",
+    "    # We will learn our regularization parameter, rather than hardcoding this\n",
+    "    BETA_REG = tf.placeholder(tf.float32)\n",
     "    \n",
     "    # Variables for our hidden layer.\n",
     "    W1 = tf.Variable(\n",
@@ -385,9 +334,8 @@
     "    # This now includes L2 regularization for our weights: both\n",
     "    # hidden weights W1 and output weights W2 \n",
     "    loss = tf.reduce_mean(\n",
-    "        tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=Ylogits) \n",
-    "        + 0.01*tf.nn.l2_loss(W1) \n",
-    "        + 0.01*tf.nn.l2_loss(W2))\n",
+    "        tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=Ylogits)) + \\\n",
+    "        BETA_REG * (tf.nn.l2_loss(W1) + tf.nn.l2_loss(W2))\n",
     "  \n",
     "    # Optimizer.\n",
     "    optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(loss)\n",
@@ -398,7 +346,7 @@
     "    valid_prediction = tf.nn.softmax(tf.matmul(valid_prediction_hidden, W2) + B2)\n",
     "    test_prediction_hidden = tf.nn.relu(tf.matmul(tf_test_dataset, W1) + B1)\n",
     "    test_prediction = tf.nn.softmax(tf.matmul(test_prediction_hidden, W2) + B2)\n",
-    "    \n",
+    "\n",
     "with tf.Session(graph=graph) as session:\n",
     "    tf.global_variables_initializer().run()\n",
     "    print('Initialized')\n",
@@ -407,17 +355,24 @@
     "        offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
     "        batch_data = train_dataset[offset:(offset + batch_size), :]\n",
     "        batch_labels = train_labels[offset:(offset + batch_size), :]\n",
-    "        feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
+    "        feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels, BETA_REG : 0.001}\n",
     "        # Run the computations. We tell .run() that we want to run the optimizer,\n",
     "        # and get the loss value and the training predictions returned as numpy\n",
     "        # arrays.\n",
     "        _, l, predictions = session.run(\n",
     "            [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
-    "        if (step % 100 == 0):\n",
+    "        if (step % 500 == 0):\n",
     "            print('Minibatch loss at step %d: %f' % (step, l))\n",
     "            print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
     "            print(\"Validation accuracy: %.1f%%\" % accuracy(valid_prediction.eval(), valid_labels))\n",
     "    print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "93%! Not bad, eh? "
    ]
   },
   {
